# pangox-compat

./: ChangeLog  Makefile.am  basic-x.c  configure.ac  pangox-compat.doap  pangox-fontcache.c  pangox-fontmap.c  pangox-private.h  pangox.c  pangox.pc.in
